<resources>
    <string name="app_name">Aula04Crud</string>
    <string name="deletar">DELETAR</string>
    <string name="alterar">ALTERAR</string>
    <string name="codigo">CÓDIGO</string>
    <string name="isbn">ISBN</string>
    <string name="tvUsuario">Usuário:</string>
    <string name="strSenha">Senha:</string>
    <string name="emptyUsuario" />
    <string name="emptySenha" />
    <string name="strEntrar">ENTRAR</string>
    <string name="txtBtnLivros">LIVROS</string>
    <string name="txtClientes">CLIENTES</string>
    <string name="txtCategorias">CATEGORIAS DE LIVROS</string>
    <string name="txtCategoriaLeitores">CATEGORIAS DE LEITORES</string>
    <string name="emptyLeitores" />
    <string name="emptyPrazo" />
    <string name="emptyCatLeitores" />
    <string name="emptyPrazo2" />
    <string name="txtGravar">GRAVAR</string>
    <string name="btnConsultar">CONSULTAR</string>
    <string name="emptyDescricaoCateg" />
    <string name="emptyDescricaoCateg2" />
    <string name="emptyEtDescricao" />
    <string name="titulo">TÍTULO</string>
    <string name="CodCategoriaLivro">CÓDIGO DA CATEGORIA</string>
    <string name="emptyCodCategLivro" />
    <string name="emptyAutor">AUTOR</string>
    <string name="palavras_chave">PALAVRAS-CHAVE</string>
    <string name="dataPublicacao">DATA DE PUBLICAÇÃO</string>
    <string name="NumeroEdicao">NÚMERO DA EDIÇÃO</string>
    <string name="editora">EDITORA</string>
    <string name="numPaginas">PÁGINAS</string>
    <string name="btnAlterar">ALTERAR</string>
    <string name="btnDeletar">DELETAR</string>
    <string name="DescricaoCategoria">DESCRIÇÃO DA CATEGORIA</string>
    <string name="prazoMax">TEMPO MÁXIMO DE EMPRÉSTIMO</string>
    <string name="stringMulta">MULTA</string>
    <string name="nomeStr">NOME</string>
    <string name="endStr">ENDEREÇO</string>
    <string name="celularStr">CELULAR</string>
    <string name="CPFstr">CPF</string>
    <string name="nascimentoStr">NASCIMENTO</string>
    <string name="CatLeitorStr">CATEGORIA DO LEITOR</string>
    <string name="emailStr">E-MAIL</string>
</resources>
