<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlteraDados">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:text="@string/codigo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/codigo"
                android:layout_width="392dp"
                android:layout_height="39dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="false" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/codigo"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:text="@string/isbn"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/isbn"
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_alignEnd="@+id/codigo"
                android:layout_alignRight="@+id/codigo"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/isbn"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text="@string/titulo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/titulo"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyCodCategLivro" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CodCategoriaLivro"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/codCategoriaLivro"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyCodCategLivro" />

            <TextView
                android:id="@+id/autor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyAutor" />

            <EditText
                android:id="@+id/autores"
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyCatLeitores" />

            <TextView
                android:id="@+id/palavras_chave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/palavras_chave" />

            <EditText
                android:id="@+id/keywords"
                android:layout_width="395dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyCatLeitores" />

            <TextView
                android:id="@+id/dt_publicacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dataPublicacao" />

            <EditText
                android:id="@+id/dtPublicacao"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyDescricaoCateg" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NumeroEdicao" />

            <EditText
                android:id="@+id/num_edicao"
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyEtDescricao" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numPaginas" />

            <EditText
                android:id="@+id/editora"
                android:layout_width="393dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyDescricaoCateg2" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editora" />

            <EditText
                android:id="@+id/num_paginas"
                android:layout_width="392dp"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyCatLeitores" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnAlterar" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deletar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>