<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".altera_dados_clientes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp"
                tools:text="@string/nomeStr" />

            <EditText
                android:id="@+id/nome"
                android:layout_width="392dp"
                android:layout_height="39dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="false" />

            <TextView
                android:id="@+id/tvEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nome"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:text="@string/endStr"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/endereco"
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_alignEnd="@+id/nome"
                android:layout_alignRight="@+id/nome"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/tvCelular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/endereco"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp"
                tools:text="@string/celularStr" />

            <EditText
                android:id="@+id/celular"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyCodCategLivro" />

            <TextView
                android:id="@+id/tvCpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CodCategoriaLivro"
                android:textSize="14sp"
                tools:text="@string/CPFstr" />

            <EditText
                android:id="@+id/cpf"
                android:layout_width="394dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyCodCategLivro" />

            <TextView
                android:id="@+id/tvNascimento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nascimentoStr" />

            <EditText
                android:id="@+id/nascimento"
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyCatLeitores" />

            <TextView
                android:id="@+id/tvCategoriaLeitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CatLeitorStr" />

            <EditText
                android:id="@+id/categoriaLeitor"
                android:layout_width="395dp"
                android:layout_height="42dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/emptyCatLeitores" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btnAlterar" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deletar" />

            </LinearLayout>

        </LinearLayout>

</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>