<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".altera_dados_categoria_livros">

    <EditText
        android:id="@+id/CatLeitores"
        android:layout_width="383dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyCatLeitores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvCodCateg"
        android:layout_width="381dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyPrazo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CatLeitores" />

    <Button
        android:id="@+id/btnAlterar"
        android:layout_width="379dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/alterar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCodCateg" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="375dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnDeletar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAlterar" />
</androidx.constraintlayout.widget.ConstraintLayout>