<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clientes">

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/nomeStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:text="@string/endStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <EditText
        android:id="@+id/endereco"
        android:layout_width="382dp"
        android:layout_height="47dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyCatLeitores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEndereco" />

    <TextView
        android:id="@+id/tvCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/celularStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endereco" />

    <EditText
        android:id="@+id/cpf"
        android:layout_width="380dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyCatLeitores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCPF" />

    <TextView
        android:id="@+id/tvCPF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="7dp"
        android:text="@string/CPFstr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/dtNascimento"
        android:layout_width="383dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyCatLeitores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNascimento" />

    <TextView
        android:id="@+id/tvCategoriaLeitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/CatLeitorStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtNascimento" />

    <Button
        android:id="@+id/btnGravar"
        android:layout_width="186dp"
        android:layout_height="47dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="63dp"
        android:text="@string/txtGravar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoriaLeitor" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="18dp"
        android:text="@string/btnConsultar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoriaLeitor" />

    <TextView
        android:id="@+id/tvNascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/nascimentoStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpf" />

    <EditText
        android:id="@+id/categoriaLeitor"
        android:layout_width="385dp"
        android:layout_height="48dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyCatLeitores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoriaLeitor" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/emailStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celular" />

    <EditText
        android:id="@+id/email"
        android:layout_width="381dp"
        android:layout_height="47dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyCatLeitores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <EditText
        android:id="@+id/nome"
        android:layout_width="382dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyCatLeitores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNome" />

    <EditText
        android:id="@+id/celular"
        android:layout_width="382dp"
        android:layout_height="47dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/emptyCatLeitores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCelular" />

</androidx.constraintlayout.widget.ConstraintLayout>