<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultaDados">
    <ListView
        android:id="@+id/lvClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:columnCount="10"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/codigo"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/endereco"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/prazo"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tvCodCateg"
            android:layout_width="26dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tvAutor"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:text="@string/emptyCatLeitores"
            tools:text="@string/emptyCatLeitores" />

        <TextView
            android:id="@+id/tvKeywords"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:text="@string/emptyCodCategLivro" />

        <TextView
            android:id="@+id/tvDtPublicacao"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:text="@string/emptyLeitores" />

        <TextView
            android:id="@+id/tvEdicao"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text="@string/emptyEtDescricao" />

        <TextView
            android:id="@+id/tvEditora"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:text="@string/emptyCodCategLivro" />

        <TextView
            android:id="@+id/tvPaginas"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/emptyCatLeitores" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>